# Scout

./: .fallowrc.json  .gitignore  .pre-commit-hooks.yaml  README.md  SECURITY.md  action.yml  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: COMPARISON.md  METHODOLOGY.md  corpus.json  run_benchmark.py
benchmarks/results/0.1.10/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.11/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.12/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.13/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.14/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.15/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.16/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.8/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
benchmarks/results/0.1.9/: raw-native-semgrep.json  raw-native.json  summary-native-semgrep.md  summary-native.md
commands/: scout-scan.md
docs/: index.html  quality-audit-roadmap.md  styles.css
scout/: __init__.py  baseline.py  cli.py  config.py  fix.py  git_history.py  mcp_server.py  models.py
scout-vscode/: .vscodeignore  README.md  package-lock.json  package.json
scout-vscode/src/: extension.ts  findings.ts
scout-vscode/test/: findings.test.cjs
scout/agents/: reporter_agent.py  scout_agent.py
scout/ai/: client.py  prompts.py
scout/engines/: __init__.py  codeql.py  semgrep.py
scout/scanners/: __init__.py  base.py  custom.py  deps.py  headers.py  injection.py  secrets.py
tests/: test_action.py  test_ai_pass.py  test_baseline.py  test_cli.py  test_collect_files.py  test_config.py  test_engines.py  test_engines_codeql.py  test_fix.py  test_git_history.py  test_mcp_server.py  test_models.py  test_output_formats.py  test_precommit_hook.py  test_scout_agent.py  test_version.py
tests/fixtures/: has_secrets.py
tests/test_scanners/: test_base.py  test_custom.py  test_deps.py  test_headers.py  test_injection.py  test_language_scope.py  test_secrets.py
