[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-security"
version = "0.1.3"
description = "AI security team in a CLI. Find, plan, fix, and verify vulnerabilities — free, local, no signup."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tejaswi Raj"}]
keywords = ["security", "scanner", "cli", "ai", "sast", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.20.0",
    "openai>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
scout = "scout.cli:app"

[project.urls]
Homepage = "https://github.com/tejaswirajgit/Scout"
Repository = "https://github.com/tejaswirajgit/Scout"
Issues = "https://github.com/tejaswirajgit/Scout/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
# S101 = assert (used by pytest, fine in tests).
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern is `Argument(...)` / `Option(...)` in defaults.
# B008 would force a refactor that goes against the framework's own examples.
"scout/cli.py" = ["B008"]
# The deps scanner intentionally invokes `pip` and `npm` by name — absolute
# paths vary per virtualenv / install. Args are list-form (no shell injection).
"scout/scanners/deps.py" = ["S603", "S607"]
# Test fixtures intentionally contain hardcoded "secrets" and unused imports —
# they exist precisely to be detected by Scout's own scanners.
"tests/fixtures/*" = ["S105", "S106", "S107", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true

# Optional AI provider SDKs — only installed via the [ai] extra.
# CI's lint job installs only [dev], so these stubs are absent.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = true
