[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-security"
version = "0.1.15"
description = "AI security team in a CLI. Find, plan, fix, and verify vulnerabilities — free, local, no signup."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tejaswi Raj"}]
keywords = ["security", "scanner", "cli", "ai", "sast", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    # .gitignore-aware file collection (gitwildmatch semantics).
    "pathspec>=0.12",
    # [tool.scout] rules — user-defined YAML detection rules (safe_load only).
    "pyyaml>=6.0",
    # [tool.scout] config parsing; stdlib tomllib covers 3.11+.
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.20.0",
    "openai>=1.10.0",
]
# MCP server (`scout-mcp`) — lets agents call the scan as a deterministic tool.
mcp = [
    "mcp>=1.9",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    # mypy targets py310 (see [tool.mypy]), where config.py imports tomli —
    # needed unconditionally so type-checking resolves it on 3.11+ too.
    "tomli>=2.0.1",
    # MCP server + its stdio test run in CI.
    "mcp>=1.9",
    # Stubs for the custom-rules YAML loader under strict mypy.
    "types-PyYAML",
]

[project.scripts]
scout = "scout.cli:app"
# NCC ScoutSuite also installs a `scout` command; whichever package is
# installed last silently owns the name. `scoutsec` always works.
scoutsec = "scout.cli:app"
# Alias matching the package name — `uvx scout-security scan .` only resolves
# when an executable is named exactly like the package (with several
# executables and no name match, uvx refuses to pick one).
scout-security = "scout.cli:app"
# MCP server over stdio (needs the `mcp` extra).
scout-mcp = "scout.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Varpost/Scout"
Repository = "https://github.com/Varpost/Scout"
Issues = "https://github.com/Varpost/Scout/issues"

[tool.setuptools.packages.find]
# Only scout* ships in the wheel. Explicit because flat-layout auto-discovery
# treats any non-default top-level dir (e.g. the plugin's commands/) as a
# package candidate and refuses to build.
include = ["scout*"]

[tool.scout]
# Dogfood: `scout scan .` stays clean on this repo. tests/ is excluded
# because fixtures and scanner tests embed deliberate findings as inputs.
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
# S101 = assert (used by pytest, fine in tests).
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern is `Argument(...)` / `Option(...)` in defaults.
# B008 would force a refactor that goes against the framework's own examples.
"scout/cli.py" = ["B008"]
# Test fixtures intentionally contain hardcoded "secrets" and unused imports —
# they exist precisely to be detected by Scout's own scanners.
"tests/fixtures/*" = ["S105", "S106", "S107", "F401"]
# History scanning shells out to git by design (fixed argv, no shell) — the
# T0.10 gitpython removal stands. Its tests build real temp repos the same way.
"scout/git_history.py" = ["S603", "S607"]
"tests/test_git_history.py" = ["S603", "S607"]
# scan_diff shells out to git the same way; its tests build real temp repos.
"scout/mcp_server.py" = ["S603", "S607"]
"tests/test_mcp_server.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true

# Optional AI provider SDKs — only installed via the [ai] extra.
# CI's lint job installs only [dev], so these stubs are absent.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = true
